# dream-analytics

./: .ocamlformat-ignore  README.md  dream-analytics.opam  dream-analytics.opam.locked  dune  dune-project
.github/workflows/: ci.yml
example/: dune  main.ml
lib/: config.ml  dream_analytics.ml  dream_analytics.mli  dune  event.ml  store.ml
lib/assets/: dream-analytics.js
lib/core/: user_agent.ml  user_agent.mli
lib/handlers/: event_handler.ml  page_handler.ml
lib/templates/: dashboard_template.eml.ml  dune  layout_template.eml.ml
test/: dune  test.ml
