(library
 (name dream_analytics)
 (public_name dream-analytics)
 (libraries dream user-agent-parser)
 (preprocess (pps lwt_ppx)))

(rule
 (targets asset.ml)
 (deps assets/dream-analytics.js)
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -e js -m plain assets/ -o %{targets}))))

(include_subdirs unqualified)
